--- a/index.html
+++ b/index.html
@@ -381,15 +381,21 @@
           name: "Saba",
           message: `Happy Birthday, Saba 🥳🎉
 
-It's been so great to know you are my friend. You're wonderful as a smart girl. 
-Sorry if i congratulations to late, I hope you have an amazing day and a fantastic year ahead, full of happiness, health, and success 💙🖐🏿`,
+It's been so great!!
+know you are my friend 👻
+You're wonderful as a smart girl 💅🏼
+Sorry if i congratulations to late 😅
+I hope you have an amazing day and a fantastic year ahead, full of happiness, health, and success 💙🖐🏿`,
         },
         Saba: {
           name: "Saba",
           message: `Happy Birthday, Saba 🥳🎉
 
-It's been so great to know you are my friend. You're a wonderful as a smart girl. 
-Sorry if i congratulations to late, I hope you have an amazing day and a fantastic year ahead, full of happiness, health, and success.
+It's been so great!!
+know you are my friend 👻
+You're wonderful as a smart girl 💅🏼
+Sorry if i congratulations to late 😅
+I hope you have an amazing day and a fantastic year ahead, full of happiness, health, and success 💙🖐🏿
       
 Cheers 🍻`,
         },
